# rust-bitcoin-cookbook

./: .gitignore  getting_started.html  print.html  searchindex.js  searchindex.json  tx_segwit-v0.html  tx_taproot.html
.github/workflows/: check-links.yml  gh-pages.yml  preview-cookbook.yml
cookbook/: book.toml  mdbook-runnable-examples.sh
cookbook/runnable_examples/: Cargo.toml
cookbook/runnable_examples/examples/getting_started/: first_tiny_program.rs  show_network.rs
cookbook/runnable_examples/examples/network/: p2wpkh_across_networks.rs  wif_across_networks.rs
cookbook/runnable_examples/examples/psbt_multiple_inputs_segwit_v0/: full_example.rs
cookbook/runnable_examples/examples/psbt_multiple_inputs_taproot/: full_example.rs
cookbook/runnable_examples/examples/tx_segwit_v0/: full_example.rs
cookbook/runnable_examples/examples/tx_taproot/: full_example.rs
cookbook/runnable_examples/output/getting_started/: first_tiny_program.samples.json  show_network.samples.json
cookbook/runnable_examples/output/network/: p2wpkh_across_networks.samples.json  p2wpkh_across_networks.stdout  wif_across_networks.samples.json
cookbook/runnable_examples/output/psbt_multiple_inputs_taproot/: full_example.stdout  (+1 more)
cookbook/src/: SUMMARY.md  generating_keys.md  getting_started.md  intro.md  network.md  note_demo.md  runnable_demo.md  tx_segwit-v0.md  tx_taproot.md
cookbook/src/psbt/: multiple_inputs_segwit-v0.md  multiple_inputs_taproot.md
psbt/: multiple_inputs_taproot.html
tools/mdbook-runnable-examples/: Cargo.toml
tools/mdbook-runnable-examples/src/: main.rs
(+4 files in other folders)
