[package]
name = "mdbook-runnable-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
base64 = "0.22"
mdbook-preprocessor = "0.5.2"
pulldown-cmark = "0.13"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
